generated/checkers/gen/AllGen-Double-Free-5aa2184e29081665f915594bc6de9b7fee6e4883/build_logs/syntax-repair-01/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static const clang::CallExpr* {anonymous}::SAGenTestChecker::findCallBeforeIf(const clang::IfStmt*, clang::ASTContext&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:189:38: error: no match for ‘operator[]’ (operand types are ‘clang::CompoundStmt::body_const_range’ {aka ‘llvm::iterator_range<clang::Stmt* const*>’} and ‘unsigned int’)
  189 |         const Stmt *Prev = CS->body()[Idx - 1];
      |                                      ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static void {anonymous}::SAGenTestChecker::buildCleanupMap(const clang::Stmt*, clang::ASTContext&, llvm::StringMap<llvm::SmallVector<{anonymous}::FreedTarget, 4> >&)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:310:41: error: no match for ‘operator[]’ (operand types are ‘clang::CompoundStmt::body_const_range’ {aka ‘llvm::iterator_range<clang::Stmt* const*>’} and ‘unsigned int’)
  310 |             const Stmt *Cur = CS->body()[I];
      |                                         ^
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In static member function ‘static bool {anonymous}::SAGenTestChecker::sawPriorLocalAssignmentTo(const clang::IfStmt*, clang::ASTContext&, const clang::VarDecl*, llvm::StringRef)’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:367:39: error: no match for ‘operator[]’ (operand types are ‘clang::CompoundStmt::body_const_range’ {aka ‘llvm::iterator_range<clang::Stmt* const*>’} and ‘unsigned int’)
  367 |           const Stmt *Cur = CS->body()[I];
      |                                       ^
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
